# Boilerplate

./: .travis.yml  Brewfile.travis  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORD-day_2-project.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-feature-request.md  questions-and-support-requests.md  reproducible-bug-report.md
cmake/: Fortran-overrides.cmake
cmake/modules/: CheckOutOfSource.cmake
src/: 05-collective-load-check.f90  grid.nml  test_assertion.f90
src/Day-1/code-jams/: 02-assertion-interface.f90  03-assertion-implementation.f90
